--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
 				<p>I wish you all the best</p>
 				<p>May your life be at ease</p>
 				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
+				<p>Remember your ambitions</p>
 				<p>you live as a free bird...</p>
 				<p>flying in the blue sky</p>
 				<p>Now things are different...</p>
@@ -163,6 +162,14 @@
 				<p>a very happy birthday Faith Javier</p>
 			</div>
 		</div>
+		<div class="six">
+			<img src="faith1.png" alt="profile" class="profile-picture" id="imagePath" />
+			<div class="wish">
+				<h3 class="wish-hbd">Happy Birthday!</h3>
+				<h5 id="wishText">May God go before you always! ;)</h5>
+			</div>
+		</div>
+
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
@@ -174,7 +181,7 @@
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
-					<button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button>
+					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
 			<!-- <div class="col-md-2">
